--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Chanchita</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph -->
-          <p class="lead">One sentence description</p>
+          <p class="lead">Bulk purchase, done retail</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -154,7 +154,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $5,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -191,13 +191,10 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum ad his scripta blandit partiendo, eum fastidii 
-            accumsan euripidis in, eum liber hendrerit an. Qui ut wisi 
-            vocibus suscipiantur, quo dicit ridens inciderint id. Quo 
-            mundi lobortis reformidans eu, legimus senserit definiebas 
-            an eos. Eu sit tincidunt incorrupte definitionem, vis mutat 
-            affert percipit cu, eirmod consectetuer signiferumque eu 
-            per. In usu latine equidem dolores.
+            Do you have a SMB? Have you ever tried to bring products 
+            from Asia to your stores, but realized the minimum payment 
+            / size of the shipment was too high?. The this on-line 
+            service is for you!
           </p>
         </div>
       </div>
@@ -205,13 +202,8 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum ad his scripta blandit partiendo, eum fastidii 
-            accumsan euripidis in, eum liber hendrerit an. Qui ut wisi 
-            vocibus suscipiantur, quo dicit ridens inciderint id. Quo 
-            mundi lobortis reformidans eu, legimus senserit definiebas 
-            an eos. Eu sit tincidunt incorrupte definitionem, vis mutat 
-            affert percipit cu, eirmod consectetuer signiferumque eu 
-            per. In usu latine equidem dolores.
+            Don't fight each other! With &quot;Chanchita&quot; you build 
+            a community of retail stores and help each other maximize results!.
           </p>
         </div>
         <div class="span5 asset">
