Changed something to test github ssh key

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
         <div class="span5 offset1 copy copy-right">
           <p>
             Don't fight each other! With &quot;Chanchita&quot; you build 
-            a community of retail stores and help each other maximize results!.
+            a community of retail stores that share your same interests 
+            and help each other maximize results!.
           </p>
         </div>
         <div class="span5 asset">
