--- a/index.html
+++ b/index.html
@@ -197,8 +197,12 @@
             </div>
           </div>
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" 
+               data-code="61944fd84386f7e43959e14e519c39fc" 
+               data-button-style="custom_large" 
+               data-button-text="Preorder with Bitcoin" 
+               href="https://coinbase.com/checkouts/61944fd84386f7e43959e14e519c39fc">Preorder with Bitcoin</a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
